helloworld/kubernetes/helloworld-deployment-rollingupdate.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        # how many pods we can add at a time
      maxUnavailable: 1  # maxUnavailable define how many pods can be unavailable
                         # during the rolling update
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      # Equivaut à
      # minReadySeconds=5
      containers:
      - name: helloworld
        image: us.gcr.io/k8s-presentation-215001/helloworld:v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - name: http
            containerPort: 5000
        livenessProbe:
          httpGet:
            path: /hello
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
