helloworld/kubernetes/helloworld-deployment-v2-canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image: us.gcr.io/k8s-presentation-215001/helloworld:v2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - name: http
            containerPort: 5000
        livenessProbe:
          httpGet:
            path: /hello
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
